--- a/src/app.css
+++ b/src/app.css
@@ -26,6 +26,11 @@ body {
 	margin: 0;
 }
 
+/* Rounded */
+.rounded-x1 {
+	border-radius: .75rem;
+}
+
 /* Container für den Inhalt mit Abstand */
 .container {
 	padding: 0 5% 5%; /* Abstand oben, links/rechts, unten */
