--- a/src/app.css
+++ b/src/app.css
@@ -230,7 +230,7 @@ button:hover {
 }
 
 /* Footer-Stile */
-.footer-top, .footer-bottom {
+.footer-top {
 	display: flex;
 	padding: 1.25% 0;
 	justify-content: center;
@@ -256,19 +256,6 @@ button:hover {
 }
 .footer-top h5 {
 	text-transform: uppercase;
-}
-
-.footer-bottom {
-	@apply bg-je-gray-900;
-	flex-direction: column;
-}
-.footer-bottom .social-media {
-	flex: 1;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	gap: 5%;
 }
 
 /* Styles for Privacy */
