--- a/src/app.css
+++ b/src/app.css
@@ -66,7 +66,7 @@ h6 {
 /* Link-Stile */
 a:hover {
 	text-decoration: underline;
-	font-weight: bold;
+	@apply text-je-sand;
 }
 
 /* Styles for Privacy */
