Global: Moved fonts from src to static

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 /* Import der Schriftart */
-@import url(./font/font.css);
+@import url(/fonts/fonts.css);
 
 /* Tailwind CSS Direktiven */
 @tailwind base;
